--- a/Synonim/Synonim/Base.lproj/Main.storyboard
+++ b/Synonim/Synonim/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,18 +22,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o5c-Wh-8h0">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="o5c-Wh-8h0">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rAA-Dn-mKB">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gC7-ZE-MTG">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KRu-bZ-iR8">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rAA-Dn-mKB">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gC7-ZE-MTG" firstAttribute="top" secondItem="o5c-Wh-8h0" secondAttribute="bottom" id="12l-yW-tXg"/>
+                            <constraint firstAttribute="trailing" secondItem="o5c-Wh-8h0" secondAttribute="trailing" id="KH9-jB-xyP"/>
+                            <constraint firstItem="o5c-Wh-8h0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="NX8-st-vu4"/>
+                            <constraint firstItem="gC7-ZE-MTG" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="SMh-j5-x85"/>
+                            <constraint firstItem="o5c-Wh-8h0" firstAttribute="leading" secondItem="gC7-ZE-MTG" secondAttribute="leading" id="cgo-x0-AHp"/>
+                            <constraint firstItem="o5c-Wh-8h0" firstAttribute="trailing" secondItem="gC7-ZE-MTG" secondAttribute="trailing" id="kd7-Mb-SMs"/>
+                            <constraint firstItem="o5c-Wh-8h0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ybE-4e-dbg"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="searchBar" destination="o5c-Wh-8h0" id="7Cu-NF-efl"/>
@@ -46,7 +64,7 @@
         <!--Single Word View Controller-->
         <scene sceneID="Ibl-fk-VXF">
             <objects>
-                <viewController id="M9X-dv-Nff" customClass="SingleWordViewController" customModule="Synonim" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SingleWordVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="M9X-dv-Nff" customClass="SingleWordViewController" customModule="Synonim" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ITW-vk-neQ"/>
                         <viewControllerLayoutGuide type="bottom" id="LTf-Xy-iFX"/>
@@ -55,9 +73,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRA-Wk-gRF">
-                                <rect key="frame" x="82" y="277" width="211" height="113"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hb-Qx-PYY">
+                                <rect key="frame" x="144" y="506" width="87" height="30"/>
+                                <state key="normal" title="back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="hI2-Ke-cuD"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRA-Wk-gRF">
+                                <rect key="frame" x="99" y="283" width="177" height="88"/>
                                 <color key="backgroundColor" red="0.71284550428390503" green="0.91186302900314331" blue="0.49682474136352539" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -65,9 +89,17 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tRA-Wk-gRF" firstAttribute="leading" secondItem="Z18-Cq-M0u" secondAttribute="leadingMargin" constant="83" id="7TI-e8-H9H"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2hb-Qx-PYY" secondAttribute="trailing" constant="128" id="EyS-HH-uU6"/>
+                            <constraint firstItem="2hb-Qx-PYY" firstAttribute="top" secondItem="ITW-vk-neQ" secondAttribute="bottom" constant="486" id="NDm-ug-2sO"/>
+                            <constraint firstItem="LTf-Xy-iFX" firstAttribute="top" secondItem="tRA-Wk-gRF" secondAttribute="bottom" constant="296" id="T1e-ib-faU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tRA-Wk-gRF" secondAttribute="trailing" constant="83" id="cOr-S8-beF"/>
+                            <constraint firstItem="2hb-Qx-PYY" firstAttribute="leading" secondItem="Z18-Cq-M0u" secondAttribute="leadingMargin" constant="128" id="uN3-hZ-3W0"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="wordLabel" destination="tRA-Wk-gRF" id="hgk-aT-6oG"/>
+                        <outlet property="synonymLabel" destination="tRA-Wk-gRF" id="58e-S4-kCH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pne-We-R2I" userLabel="First Responder" sceneMemberID="firstResponder"/>
